# project1-online-commerce

./: .env.example  Makefile  README.md  activity.db  pyproject.toml  requirements.txt  run.py  schema.txt
.github/workflows/: CI.yml
P1/: .pylintrc  Makefile  README.md  d  run.py
P1/app/: run.py
P2/: README.md  schema.sql  schema.txt
P3/: .env.example  .gitignore  Database Project 3 Presentation  README.md  makefile  pyproject.toml  requirements.txt  seed.py
P3/app/: __init__.py  activity.db
P3/app/data/: maps_data.json
P3/app/models/: activity_groups.py  events.py  locations.py  member.py  prerequisite.py  resident.py  reviews.py  sessions.py  user.py  users.py
P3/app/routes/: __init__.py  auth.py  events.py  locations.py  main.py  members.py  prerequisites.py  reviews.py  sessions.py
P3/app/services/: activity_groups.py
P3/app/static/: style.css
P3/app/templates/: admin_dashboard.html  base.html  profile.html
P3/app/templates/auth/: profile.html  register.html
P3/app/templates/events/: create.html  delete.html  edit.html  list.html  prerequisites.html  view.html
P3/app/templates/locations/: details.html
P3/app/templates/main/: index.html
P3/app/templates/reviews/: create.html  edit.html  list.html
P3/app/utils/: database.py  decorators.py  email.py  init_db.py  maps_manager.py  schema.sql  schema.txt
P3/tests/: conftest.py
P3/tests/routes/: auth_test.py  events_test.py  main_test.py
P3/tests/services/: activity_groups_test.py
app/: __init__.py  auth.py  run.py  store.py
tests/: conftest.py
website/: __init__.py  store.py
(+63 files in other folders)
